feat: add checking if project is applied yet
